--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top justify-content-center">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+            <img src="img/logo.png" alt="Logo principal" class="logo_main">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link text-white h5" aria-current="page" href="#">Inicio</a>
@@ -25,9 +26,10 @@
                     <a class="nav-link text-white h5" href="#">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white h5" href="#">Nosostros</a>
+                    <a class="nav-link text-white h5" href="#">Nosotros</a>
                 </li>
             </ul>
+            <input type="button" value="Contactar" class="btn_contactar">
         </nav>
         
     </div>
@@ -123,21 +125,14 @@
 
     <div class="footer">
         <div class="row">
-            <div class="col-lg-6 colum">
-                <div class="col-lg-1">
-                    <p class="text-white">Dirección</p>
-                </div>
-                <div class="col-lg-1">
-                    <p class="text-white">(+51) 999 999 999</p>
-                </div>
-                <div class="col-lg-1">
-                    <p class="text-white">contacto@gallegos.com</p>
-                </div>
-                <div class="col-lg-1">
-                    <p class="text-white">Ecuentrános en</p>
-                </div>
+            <div class="col-lg-6 colum footer_left">
+                <img src="img/logo_blanco.png" alt="Logo blanco" class="logo_footer">
+                <p class="text-white">Dirección</p>
+                <p class="text-white">(+51) 999 999 999</p>
+                <p class="text-white">contacto@gallegos.com</p>
+                <p class="text-white">Ecuentrános en</p>
             </div>
-            <div class="col-lg-6 colum">
+            <div class="col-lg-6 colum footer_right">
                 <div class="col-lg-1">
                     <p class="h3 text-white">Escríbenos</p>
                 </div>
@@ -146,9 +141,10 @@
                 </div>
                 <div class="col-lg-1">
                     <input type="text" placeholder="Teléfono">
-                    <input type="text" placeholder="Correo">
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-1">
+                    <input type="text" placeholder="Correo">
+                <div class="col-lg-1">
                     <input type="text" placeholder="Mensaje">
                 </div>
                 <div class="col-lg-1">
