--- a/index.html
+++ b/index.html
@@ -56,29 +56,34 @@
         </button>
     </div>
 
-    <div class="container marketing">
-        <div class="row">
-            <div class="col-lg-4">
-                <img src="img/1366px_Home_Servicios_MarketingDigital.png" alt="Marketing Digital">
-                <h2>Marketing Digital</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <div class=" marketing">
+        <div class="cuadro_servicios">
+            <div class="title_servicios">
+                <p class="p_nuestros">Nuestros<span class="p_servicios">Servicios</span></p>
             </div>
-            <div class="col-lg-4">
-                <img src="img/1366px_Home_Servicios_DiseñoGrafico.png" alt="Diseño Gráfico">
-                <h2>Diseño Gráfico</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
-            <div class="col-lg-4">
-                <img src="img/1366px_Home_Servicios_DiseñoWeb.png" alt="Desarrollo Web">
-                <h2>Desarrollo Web</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="img/1366px_Home_Servicios_MarketingDigital.png" alt="Marketing Digital">
+                    <h2>Marketing Digital</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="img/1366px_Home_Servicios_DiseñoGrafico.png" alt="Diseño Gráfico">
+                    <h2>Diseño Gráfico</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="img/1366px_Home_Servicios_DiseñoWeb.png" alt="Desarrollo Web">
+                    <h2>Desarrollo Web</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
             </div>
         </div>
     </div>
         
     <div class="images">
         <div class="row">
-            <div class="col-lg-4 column">
+            <div class="col-lg-4">
                 <div class="col-lg-6">
                     <img src="img/image 1.png" alt="">
                 </div>
@@ -134,21 +139,31 @@
             </div>
             <div class="col-lg-6 colum footer_right">
                 <div class="col-lg-1">
-                    <p class="h3 text-white">Escríbenos</p>
+                    <p class="h3 text-white">¡Escríbenos!</p>
                 </div>
-                <div class="col-lg-1">
-                    <input type="text" placeholder="Nombres">
+                <div class="mb-3 row">
+                    <div class="col-lg-10">
+                        <input class="form-control" type="text" placeholder="Nombres">
+                    </div>
                 </div>
-                <div class="col-lg-1">
-                    <input type="text" placeholder="Teléfono">
+                <div class="mb-3 row">
+                    <div class="col-lg-5">
+                        <input class="form-control" type="text" placeholder="Teléfono">
+                    </div>
+                    <div class="col-lg-5">
+                        <input class="form-control" type="text" placeholder="Correo electrónico">
+                    </div>
                 </div>
-                <div class="col-lg-1">
-                    <input type="text" placeholder="Correo">
-                <div class="col-lg-1">
-                    <input type="text" placeholder="Mensaje">
+                <div class="mb-3 row">
+                    <div class="col-lg-10">
+                        <textarea class="form-control mensaje" placeholder="Mensaje"></textarea>
+                        <!-- <input class="form-control mensaje" type="text" placeholder="Mensaje"> -->
+                    </div>
                 </div>
-                <div class="col-lg-1">
-                    <input type="button" value="Enviar">
+                <div class="mb-3 row">
+                    <div class="col-lg-2">
+                        <input class="form-control btn_enviar" type="button" value="Enviar">
+                    </div>
                 </div>
             </div>
         </div>
