--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar_main">
             <img src="img/logo.png" alt="Logo principal" class="logo_main">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link text-white h5" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link text-white h6" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white h5" href="#">Servicios</a>
+                    <a class="nav-link text-white h6" href="#">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white h5" href="#">Proyectos</a>
+                    <a class="nav-link text-white h6" href="#">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white h5" href="#">Nosotros</a>
+                    <a class="nav-link text-white h6" href="#">Nosotros</a>
                 </li>
             </ul>
-            <input type="button" value="Contactar" class="btn_contactar">
+            <input type="button" value="Contactar" class="btn_contactar" id="contactar">
         </nav>
         
     </div>
@@ -64,17 +64,17 @@
             <div class="row">
                 <div class="col-lg-4">
                     <img src="img/1366px_Home_Servicios_MarketingDigital.png" alt="Marketing Digital">
-                    <h2>Marketing Digital</h2>
+                    <h2 class="services">Marketing Digital</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="col-lg-4">
                     <img src="img/1366px_Home_Servicios_DiseñoGrafico.png" alt="Diseño Gráfico">
-                    <h2>Diseño Gráfico</h2>
+                    <h2 class="services">Diseño Gráfico</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="col-lg-4">
                     <img src="img/1366px_Home_Servicios_DiseñoWeb.png" alt="Desarrollo Web">
-                    <h2>Desarrollo Web</h2>
+                    <h2 class="services">Desarrollo Web</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
@@ -84,23 +84,15 @@
     <div class="images">
         <div class="row">
             <div class="col-lg-4">
-                <div class="col-lg-6">
-                    <img src="img/image 1.png" alt="">
-                </div>
-                <div class="col-lg-6">
-                    <img src="img/image 2.png" alt="">
-                </div>
+                <img src="img/image 1.png" alt="">
+                <img src="img/image 2.png" alt="">
             </div>
             <div class="col-lg-4">
                 <img src="img/image 3.png" alt="">
             </div>
             <div class="col-lg-4">
-                <div class="col-lg-6">
-                    <img src="img/image 4.png" alt="">
-                </div>
-                <div class="col-lg-6">
-                    <img src="img/image 5.png" alt="">
-                </div>
+                <img src="img/image 4.png" alt="">
+                <img src="img/image 5.png" alt="">
             </div>
         </div>
         <div class="row">
@@ -108,12 +100,8 @@
                 <img src="img/image 6.png" alt="">
             </div>
             <div class="col-lg-4">
-                <div class="col-lg-6">
-                    <img src="img/image 7.png" alt="">
-                </div>
-                <div class="col-lg-6">
-                    <img src="img/image 8.png" alt="">
-                </div>
+                <img src="img/image 7.png" alt="">
+                <img src="img/image 8.png" alt="">
             </div>
             <div class="col-lg-4">
                 <img src="img/image 9.png" alt="">
@@ -124,7 +112,7 @@
     <div class="cita">
         <div class="cuadro_cita">
             <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit animi veritatis laudantium, ipsam quo sapiente omnis aspernatur et, reiciendis eum id, inventore voluptates? Dolore facilis, aperiam nihil earum pariatur asperiores."</p>
-            <strong>Gallegos Corp.</strong>
+            <strong>-Bruno Rengifo, Gallegos Corp.</strong>
         </div>
     </div>
 
@@ -132,13 +120,19 @@
         <div class="row">
             <div class="col-lg-6 colum footer_left">
                 <img src="img/logo_blanco.png" alt="Logo blanco" class="logo_footer">
-                <p class="text-white">Dirección</p>
-                <p class="text-white">(+51) 999 999 999</p>
-                <p class="text-white">contacto@gallegos.com</p>
-                <p class="text-white">Ecuentrános en</p>
+                <p class="text-white data_company"><img src="img/map-pin.svg" alt="Icono mapa">&nbsp&nbsp&nbspDirección</p>
+                <p class="text-white data_company"><img src="img/telephone.svg" alt="Icono telephone">&nbsp&nbsp&nbsp(+51) 999 999 999</p>
+                <p class="text-white data_company"><img src="img/mail.svg" alt="Icono correo">&nbsp&nbsp&nbspcontacto@gallegos.com</p>
+                <p class="text-white data_company">Encuentrános en</p>
+                <div class="iconos">
+                    <img src="img/facebook.svg" alt="Icono facebook">
+                    <img src="img/twitter.svg" alt="Icono twitter">
+                    <img src="img/youtube.svg" alt="Icono youtube">
+                    <img src="img/instagram.svg" alt="Icono instagram">
+                </div>
             </div>
             <div class="col-lg-6 colum footer_right">
-                <div class="col-lg-1">
+                <div class="mb-3 row form_title">
                     <p class="h3 text-white">¡Escríbenos!</p>
                 </div>
                 <div class="mb-3 row">
@@ -173,5 +167,6 @@
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
